--- a/style.css
+++ b/style.css
@@ -7,12 +7,85 @@ body {
     min-height: 100vh;
     background-color: #1e2133;
     background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 18c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm48 25c3.866 0 7-3.134 7-7s-3.134-7-7-7-7 3.134-7 7 3.134 7 7 7zm-43-7c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm63 31c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM34 90c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm56-76c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zM12 86c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm28-65c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm23-11c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-6 60c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm29 22c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zM32 63c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm57-13c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm-9-21c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM60 91c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM35 41c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM12 60c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z' fill='%233e294d' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
-    color: #FFF;
-    font-weight: 700;
+    color: rgb(33, 38, 49);
     font-family: 'Fjalla One', sans-serif;
-    /* font-family: 'Lora', serif; */
+    font-weight: 700;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.quote-container {
+    width: auto;
+    max-width: 900px;
+    margin: 0 20px;
+    padding: 20px 30px;
+    border-radius: 3px;
+    background-color: rgb(251, 235, 255);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .25);
+}
+
+.quote-text {
+    font-size: 1.25rem;
+}
+
+.long-quote {
+    font-size: 1rem;
+}
+
+.fa-quote-left,
+.fa-quote-right {
+    font-size: .5rem;
+}
+
+.quote-author {
+    margin: .5rem 0;
+    font-family: 'Lora', serif;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    cursor: pointer;
+    border: solid 1px transparent;
+    border-radius: 3px;
+    padding: 6px 10px;
+    color: #FFF;
+    background-color: #1E2133;
+    outline: none;
+    transition: background-color .3s ease-in-out;
+}
+
+button:hover {
+    background-color: #5c2a5e;
+}
+
+button:active {
+    background-color: #431e44;
+}
+
+.twitter-button {
+    border: solid 1px #1E2133;
+    color: #1E2133;
+    background-color: transparent;
+    transition: color .3s ease-in-out, 
+                background-color .3s ease-in-out,
+                border-color .3s ease-in-out;
+}
+
+.twitter-button:hover {
+    color: #FFF;
+    background-color: #38a1f3;
+    border-color: #38a1f3;
+}
+
+.twitter-button:active {
+    background-color: #3288ca;
+    border-color: #3288ca;
 }
