Implemented loader with corresponding javascript logic and css styles.

--- a/style.css
+++ b/style.css
@@ -89,3 +89,17 @@ button:active {
     background-color: #3288ca;
     border-color: #3288ca;
 }
+
+.loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #5c2a5e;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
