Some refactoring and moved magic numbers into separate contants. Implemented logic to prevent API call from going into infinte loop and in case of error rendering its details in the quote container area.

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ button:active {
 .twitter-button {
     border: solid 1px #1E2133;
     color: #1E2133;
+    margin-right: 20px;
     background-color: transparent;
     transition: color .3s ease-in-out, 
                 background-color .3s ease-in-out,
